# paperdown

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  coverage.yml  rust-ci.yml
artefacts/: paperdown.schema.json
assets/: paperdown_example.excalidraw
paper_to_md/: cli.py  core.py
src/: cli.rs  config.rs  core.rs  lib.rs  main.rs
src/core/: assets.rs  input.rs  layout.rs  markdown.rs  ocr.rs  okf.rs  output.rs  table_normalization.rs
tests/: cli_coverage.rs  cli_existing_output.rs  cli_okf.rs  core_internal.rs  test_core.py
xtask/codegen/: Cargo.toml
xtask/codegen/src/: main.rs
