[package]
name = "paperdown"
version = "0.1.0"
authors = ["Anatoly Tsyplenkov <atsyplenkov@fastmail.com>"]
edition = "2024"
description = "Convert paper PDFs into markdown with local figures using Z.AI OCR."
license = "MIT"
readme = "README.md"
repository = "https://github.com/atsyplenkov/paperdown"
homepage = "https://github.com/atsyplenkov/paperdown"
documentation = "https://docs.rs/paperdown"
keywords = ["ocr", "pdf", "markdown", "cli"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "paperdown"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
indicatif = "0.17"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "fs", "sync"] }
url = "2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
